debug-storybook.log
[12:14:46.510] [INFO] storybook v10.2.14
[12:14:46.758] [ERROR] [38;2;241;97;97mSB_CORE-SERVER_0007 (MainFileEvaluationError): Storybook couldn't evaluate your [33m.storybook\main.js[39m file.

Original error:
[37m\.storybook\main.js:18
export default config;
^^^^^^

SyntaxError: Unexpected token 'export'
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:339:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:242:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)[39m[39m
    at loadMainConfig (file:///C:/Users/kavii/OneDrive/Desktop/SLUDI%20-components/node_modules/storybook/dist/_node-chunks/chunk-VCZAAJQM.js:11709:11)
    at async buildDevStandalone (file:///C:/Users/kavii/OneDrive/Desktop/SLUDI%20-components/node_modules/storybook/dist/core-server/index.js:7552:16)
    at async withTelemetry (file:///C:/Users/kavii/OneDrive/Desktop/SLUDI%20-components/node_modules/storybook/dist/_node-chunks/chunk-DTZLXIO2.js:218:12)
    at async dev (file:///C:/Users/kavii/OneDrive/Desktop/SLUDI%20-components/node_modules/storybook/dist/bin/core.js:2734:3)
    at async _Command.<anonymous> (file:///C:/Users/kavii/OneDrive/Desktop/SLUDI%20-components/node_modules/storybook/dist/bin/core.js:2804:92)
[12:14:46.768] [WARN] Broken build, fix the error above.
You may need to refresh the browser.
[12:14:46.776] [WARN]   Failed to load preset: "C:/Users/kavii/OneDrive/Desktop/SLUDI -components/.storybook/main.js"
[12:14:46.776] [ERROR] .\.storybook\main.js:18
export default config;
^^^^^^

[38;2;241;97;97mSyntaxError: Unexpected token 'export'[39m
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at loadCJSModuleWithModuleLoad (node:internal/modules/esm/translators:339:3)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/translators:242:7)
    at ModuleJob.run (node:internal/modules/esm/module_job:413:25)